Stabilize home-assistant release

--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -17,6 +17,10 @@ initSecurityContext:
   runAsUser: 1000
   runAsNonRoot: true
 
+initWaitForPostgres:
+  enabled: true
+  host: home-assistant-postgresql
+
 ingress:
   enabled: true
   className: nginx
