Fix qbittorrent download dir

--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -63,7 +63,7 @@ persistence:
     enabled: true
     type: hostPath
     mountPath: /media
-    hostPath: /samba
+    hostPath: /downloads
 
 
 portal:
