--- a/helmfiles/backbone/values/postgres-operator/common.yaml
+++ b/helmfiles/backbone/values/postgres-operator/common.yaml
@@ -6,3 +6,23 @@ readinessProbe: false
 configKubernetes:
   enable_pod_antiaffinity: true
   enable_readiness_probe: true
+
+# configAwsOrGcp:
+#   # Additional Secret (aws or gcp credentials) to mount in the pod
+#   # additional_secret_mount: "some-secret-name"
+
+#   # Path to mount the above Secret in the filesystem of the container(s)
+#   # additional_secret_mount_path: "/some/dir"
+
+#   # AWS region used to store EBS volumes
+#   aws_region: eu-central-1
+
+#   # GCP credentials that will be used by the operator / pods
+#   # gcp_credentials: ""
+
+#   # AWS IAM role to supply in the iam.amazonaws.com/role annotation of Postgres pods
+#   # kube_iam_role: ""
+
+#   log_s3_bucket: database-backup-szymonrychu
+#   AKIAZU2E2AB4CNRX3OYR
+#   VmdyYk7H5DEB4IHAma5cejyF1SCpef1lNQEO9uDC
