--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -106,12 +106,12 @@ grafana:
       oauth_auto_login: true
     "auth.generic_oauth":
       enabled: true
-      scopes: profile,email,groups,openid
+      scopes: profile,email,groups,openid,offline_access
       name: Keycloak
-      allow_sign_up: false
-      auth_url: https://auth.szymonrichert.pl/realms/lab/protocol/openid-connect/auth
-      token_url: https://auth.szymonrichert.pl/realms/lab/protocol/openid-connect/token
-      api_url: https://auth.szymonrichert.pl/realms/lab/protocol/openid-connect/userinfo
+      allow_sign_up: true
+      auth_url: https://auth.szymonrichert.pl/realms/master/protocol/openid-connect/auth
+      token_url: https://auth.szymonrichert.pl/realms/master/protocol/openid-connect/token
+      api_url: https://auth.szymonrichert.pl/realms/master/protocol/openid-connect/userinfo
       role_attribute_path: contains(groups[*], 'grafana-admin') && 'Admin' || contains(groups[*], 'grafana-dev') && 'Editor' || 'Viewer'
     server:
       root_url: https://grafana.szymonrichert.pl/
