--- a/helmfiles/blog/helmfile.yaml
+++ b/helmfiles/blog/helmfile.yaml
@@ -2,9 +2,6 @@ repositories:
 - name: bitnami
   url: https://charts.bitnami.com/bitnami
 templates:
-  operators-default:
-    disableValidation: true
-    disableValidationOnInstall: true
   default: &default
     wait: true
     missingFileHandler: Warn
@@ -17,26 +14,28 @@ templates:
       showlogs: true
       command: ../../.hook.sh
       args:
-      - authentication
+      - storage
       - '{{`{{ .Event.Name }}`}}'
       - '{{`{{ .Release.Name }}`}}'
       - '{{`{{ .Release.Namespace }}`}}'
     values:
     - values/common.yaml
-    - values/common-{{`{{ .Environment.Name }}`}}.yaml
+    - values/{{`{{ .Environment.Name }}`}}.yaml
     - values/{{`{{ .Release.Name }}`}}/common.yaml
     - values/{{`{{ .Release.Name }}`}}/{{`{{ .Environment.Name }}`}}.yaml
     secrets:
     - values/{{`{{ .Release.Name }}`}}/{{`{{ .Environment.Name }}`}}.secrets.yaml
-
+  operators-default:
+    disableValidation: true
+    disableValidationOnInstall: true
+    <<: *default
 releases:
 
-- name: keycloak
-  timeout: 600
-  version: 14.0.0
-  chart: bitnami/keycloak
-  namespace: keycloak
+- name: wordpress
+  version: 15.2.60
+  chart: bitnami/wordpress
+  namespace: blog
   labels:
-    purpose: authentication
-    application: keycloak
+    purpose: blog
+    application: wordpress
   <<: *default
