Updates for the pipeline

--- a/helmfiles/media/helmfile.yaml
+++ b/helmfiles/media/helmfile.yaml
@@ -40,11 +40,11 @@ releases:
     application: flood-rtorrent
   <<: *default
 
-- name: jellyfin
-  chart: szymonrychu/jellyfin
-  version: 0.4.2
-  namespace: media
-  labels:
-    purpose: media
-    application: jellyfin
-  <<: *default
+# - name: jellyfin
+#   chart: szymonrychu/jellyfin
+#   version: 0.4.2
+#   namespace: media
+#   labels:
+#     purpose: media
+#     application: jellyfin
+#   <<: *default
