--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -84,7 +84,7 @@ grafana:
   persistence:
     type: pvc
     enabled: true
-    storageClassName: local-path
+    storageClassName: nas-nfs
     accessModes:
       - ReadWriteOnce
     size: 2Gi
