--- a/.github/workflows/diff.yaml
+++ b/.github/workflows/diff.yaml
@@ -12,6 +12,10 @@ jobs:
 
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        repository: szymonrychu/helmfile-cluster
+        token: ${{ secrets.BOT_TOKEN }}
+        submodules: recursive
 
     - name: Diff
       env:
