--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -47,10 +47,19 @@ prometheusOperator:
         memory: 200Mi
 
 grafana:
+  # enabled: false
   # disable sidecar due to error loading datasources.yaml at grafana pod start
   sidecar:
+    dashboards:
+      skipReload: true
+      # reloadURL: "http://localhost:3000/api/admin/provisioning/dashboards/reload"
+      provider:
+        allowUiUpdates: true
+        foldersFromFilesStructure: true
     datasources:
-      enabled: false
+      skipReload: true
+      initDatasources: true
+      # reloadURL: "http://localhost:3000/api/admin/provisioning/datasources/reload"
   deploymentStrategy:
     type: Recreate
   securityContext:
@@ -107,9 +116,10 @@ grafana:
         secretName: grafana-tls
   grafana.ini:
     auth:
-      oauth_auto_login: true
+      disable_login_form: true
     "auth.generic_oauth":
       enabled: true
+      auto_login: true
       scopes: openid,profile,email,offline_access,groups
       email_attribute_path: email
       login_attribute_path: username
@@ -120,6 +130,7 @@ grafana:
       token_url: https://auth.szymonrichert.pl/realms/master/protocol/openid-connect/token
       api_url: https://auth.szymonrichert.pl/realms/master/protocol/openid-connect/userinfo
       role_attribute_path: contains(groups[*], 'grafana-admin') && 'Admin' || contains(groups[*], 'grafana-dev') && 'Editor' || 'Viewer'
+      allow_assign_grafana_admin: true
     server:
       root_url: https://grafana.szymonrichert.pl/
     smtp:
