Enable monitoring for influx, cleanup prometheus values.yaml

--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -98,6 +98,8 @@ influxdb:
     admin:
       org: home-assistant
       bucket: home-assistant
+  updateStrategy:
+    type: Recreate
   influxdb:
     affinity: 
       nodeAffinity:
@@ -139,196 +141,5 @@ influxdb:
       - ReadWriteMany
   volumePermissions:
     enabled: true
-  ## @section Metrics parameters
-  ## Prometheus metrics
-  ## ref: https://docs.influxdata.com/influxdb/v1.7/administration/server_monitoring/#influxdb-metrics-http-endpoint
-  ##
   metrics:
-    ## @param metrics.enabled Enable the export of Prometheus metrics
-    ##
-    enabled: false
-    service:
-      ## @param metrics.service.type Kubernetes service type (`ClusterIP`, `NodePort` or `LoadBalancer`)
-      ##
-      type: ClusterIP
-      ## @param metrics.service.port InfluxDB&trade; Prometheus port
-      ##
-      port: 9122
-      ## @param metrics.service.nodePort Kubernetes HTTP node port
-      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
-      ##
-      nodePort: ""
-      ## @param metrics.service.loadBalancerIP loadBalancerIP if service type is `LoadBalancer`
-      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
-      ##
-      loadBalancerIP: ""
-      ## @param metrics.service.loadBalancerSourceRanges Address that are allowed when service is LoadBalancer
-      ## https://kubernetes.io/docs/tasks/access-application-cluster/configure-cloud-provider-firewall/#restrict-access-for-loadbalancer-service
-      ##
-      ## loadBalancerSourceRanges:
-      ## - 10.10.10.0/24
-      loadBalancerSourceRanges: []
-      ## @param metrics.service.clusterIP Static clusterIP or None for headless services
-      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#choosing-your-own-ip-address
-      ## e.g:
-      ## clusterIP: None
-      ##
-      clusterIP: ""
-      ## @param metrics.service.annotations [object] Annotations for the Prometheus metrics service
-      ##
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "{{ .Values.metrics.service.port }}"
-        prometheus.io/path: "/metrics"
-      ## @param metrics.service.externalTrafficPolicy Service external traffic policy
-      ## ref http://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
-      ##
-      externalTrafficPolicy: Cluster
-      ## @param metrics.service.extraPorts Extra ports to expose (normally used with the `sidecar` value)
-      ##
-      extraPorts: []
-      ## @param metrics.service.sessionAffinity Session Affinity for Kubernetes service, can be "None" or "ClientIP"
-      ## If "ClientIP", consecutive client requests will be directed to the same mongos Pod
-      ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#virtual-ips-and-service-proxies
-      ##
-      sessionAffinity: None
-      ## @param metrics.service.sessionAffinityConfig Additional settings for the sessionAffinity
-      ## sessionAffinityConfig:
-      ##   clientIP:
-      ##     timeoutSeconds: 300
-      ##
-      sessionAffinityConfig: {}
-
-    ## Prometheus Operator ServiceMonitor configuration
-    ##
-    serviceMonitor:
-      ## @param metrics.serviceMonitor.enabled if `true`, creates a Prometheus Operator ServiceMonitor (also requires `metrics.enabled` to be `true`)
-      ##
-      enabled: false
-      ## @param metrics.serviceMonitor.namespace Namespace in which Prometheus is running
-      ## e.g:
-      ## namespace: monitoring
-      ##
-      namespace: ""
-      ## @param metrics.serviceMonitor.interval Interval at which metrics should be scraped.
-      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
-      ## e.g:
-      ## interval: 10s
-      ##
-      interval: ""
-      ## @param metrics.serviceMonitor.scrapeTimeout Timeout after which the scrape is ended
-      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#endpoint
-      ## e.g:
-      ## scrapeTimeout: 10s
-      ##
-      scrapeTimeout: ""
-      ## @param metrics.serviceMonitor.relabelings RelabelConfigs to apply to samples before scraping
-      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#relabelconfig
-      ##
-      relabelings: []
-      ## @param metrics.serviceMonitor.metricRelabelings MetricRelabelConfigs to apply to samples before ingestion
-      ## ref: https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#relabelconfig
-      ##
-      metricRelabelings: []
-      ## @param metrics.serviceMonitor.selector Prometheus instance selector labels
-      ## ref: https://github.com/bitnami/charts/tree/main/bitnami/prometheus-operator#prometheus-configuration
-      ## e.g:
-      ## selector:
-      ##   prometheus: my-prometheus
-      ##
-      selector: {}
-      ## @param metrics.serviceMonitor.honorLabels honorLabels chooses the metric's labels on collisions with target labels
-      ##
-      honorLabels: false
-
-# postgresql:
-#   enabled: true
-#   auth:
-#     username: home-assistant
-#     database: home-assistant
-#   architecture: replication # standalone
-#   primary:
-#     podSecurityContext:
-#       enabled: true
-#       fsGroup: 1000
-#     containerSecurityContext:
-#       enabled: true
-#       runAsUser: 1000
-#       runAsNonRoot: true
-#     podLabels:
-#       application: postgresql-primary
-#     persistence:
-#       enabled: true
-#       storageClass: nas-nfs
-#       accessModes: 
-#         - ReadWriteMany
-#     affinity:
-#       nodeAffinity:
-#         requiredDuringSchedulingIgnoredDuringExecution:
-#           nodeSelectorTerms:
-#           - matchExpressions:
-#             - key: "kubernetes.io/hostname"
-#               operator: In
-#               values:
-#                 - nuc1
-#                 - nuc2
-#                 - nuc3
-#       podAntiAffinity:
-#         requiredDuringSchedulingIgnoredDuringExecution:
-#         - labelSelector:
-#             matchExpressions:
-#             - key: application
-#               operator: In
-#               values:
-#               - postgresql-primary
-#           topologyKey: "kubernetes.io/hostname"
-#     resources:
-#       requests:
-#         memory: 64Mi
-#         cpu: 10m
-#       limits:
-#         memory: 256Mi
-#         cpu: 100m
-#   readReplicas:
-#     replicaCount: 3
-#     podSecurityContext:
-#       enabled: true
-#       fsGroup: 1000
-#     containerSecurityContext:
-#       enabled: true
-#       runAsUser: 1000
-#       runAsNonRoot: true
-#     podLabels:
-#       application: postgresql-readonly
-#     persistence:
-#       enabled: true
-#       storageClass: nas-nfs
-#       accessModes: 
-#         - ReadWriteMany
-#     affinity:
-#       nodeAffinity:
-#         requiredDuringSchedulingIgnoredDuringExecution:
-#           nodeSelectorTerms:
-#           - matchExpressions:
-#             - key: "kubernetes.io/hostname"
-#               operator: In
-#               values:
-#                 - nuc1
-#                 - nuc2
-#                 - nuc3
-#       podAntiAffinity:
-#         requiredDuringSchedulingIgnoredDuringExecution:
-#         - labelSelector:
-#             matchExpressions:
-#             - key: application
-#               operator: In
-#               values:
-#               - postgresql-readonly
-#           topologyKey: "kubernetes.io/hostname"
-#     resources:
-#       requests:
-#         memory: 64Mi
-#         cpu: 10m
-#       limits:
-#         memory: 256Mi
-#         cpu: 100m
+    enabled: true
