--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -1,6 +1,3 @@
-image:
-  tag: "2023.5.3"
-
 config:
   http:
     trusted_proxies:
@@ -143,3 +140,6 @@ influxdb:
     enabled: true
   metrics:
     enabled: true
+
+zalandoPostgresql:
+  enabled: true
