--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -1,10 +1,11 @@
+
 config:
-  http:
-    trusted_proxies:
+  network:
+    trustedProxies:
       - 127.0.0.1/32
-      - 10.8.0.0/16
-      - 10.42.0.0/16
-      - 192.168.8.0/24
+      - 192.168.1.0/24
+      - 10.96.0.0/12
+      - 10.244.0.0/16
 
 podSecurityContext:
   fsGroup: 1000
