Add schedule to automerge wf

--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -17,6 +17,9 @@ on:
     types:
       - completed
   status: {}
+  workflow_dispatch:
+  schedule:
+    - cron: "0 */6 * * *"
 jobs:
   automerge:
     runs-on: ubuntu-latest
