--- a/.github/workflows/helmfile_diff.yaml
+++ b/.github/workflows/helmfile_diff.yaml
@@ -1,18 +1,14 @@
-name: sync
+name: Helmfile Diff
 
 on:
-  push:
+  workflow_dispatch:
+  pull_request:
     branches:
       - main
-  release:
-    types:
-      - created
-
-concurrency:
-  group: ${{ github.head_ref || github.run_id }}
 
 jobs:
   build:
+    name: Helmfile Diff
     runs-on: [self-hosted, linux, X64]
     steps:
 
@@ -23,11 +19,11 @@ jobs:
         token: ${{ secrets.BOT_TOKEN }}
         submodules: recursive
 
-    - name: Sync
+    - name: Diff
       env:
         ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
       run: |
         set -e
         echo $ENCRYPTION_KEY | base64 --decode > encryption_key.gpg
         gpg --import encryption_key.gpg
-        helmfile apply
+        helmfile diff || true
