--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -13,6 +13,7 @@ containerSecurityContext:
     - ALL
   enabled: true
   runAsUser: 1000
+  runAsGroup: 1000
   runAsNonRoot: true
 
 initSecurityContext:
@@ -21,6 +22,7 @@ initSecurityContext:
     - ALL
   enabled: true
   runAsUser: 1000
+  runAsGroup: 1000
   runAsNonRoot: true
 
 initWaitForPostgres:
