--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -22,16 +22,16 @@ jobs:
       )
 
     steps:
-      - name: "Request review from @szymonrychu"
+      - name: "Request review from @szymonrychu-bot"
         uses: "actions/github-script@v5"
         with:
-          github-token: "${{ secrets.BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
 
             const reviewers = [
-              "szymonrychu",
+              "szymonrychu-bot",
             ]
 
             await github.rest.pulls.requestReviewers({
@@ -41,16 +41,16 @@ jobs:
               reviewers: reviewers,
             })
 
-      - name: "Assign @szymonrychu"
+      - name: "Assign @szymonrychu-bot"
         uses: "actions/github-script@v5"
         with:
-          github-token: "${{ secrets.BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
 
             const assignees = [
-              "szymonrychu",
+              "szymonrychu-bot",
             ]
 
             await github.rest.issues.addAssignees({
@@ -63,7 +63,7 @@ jobs:
       - name: "Approve pull request"
         uses: "actions/github-script@v5"
         with:
-          github-token: "${{ secrets.BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
@@ -78,7 +78,7 @@ jobs:
       - name: "Merge pull request"
         uses: "actions/github-script@v5"
         with:
-          github-token: "${{ secrets.BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
